# eecs149finalproject

./: .gitignore
3dprints/: README.md
backend/: .gitignore  Procfile  README.md  pyproject.toml
backend/readyaction/: __main__.py  main.py
backend/readyaction/templates/: index.html
broker/: README.md  main.py  pyproject.toml
broker/broker/: __main__.py  main.py
rpi_zero/: RPI_SETUP.md  test_2040_receive.py  test_socket_receiver.py  test_socket_sender.py
src/: RobotMotion.lf  RobotMotionTemp.lf
