[project]
name = "readyaction"
version = "0.1.0"
description = "VLM inference server outputting actions given images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "openai>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
