[project]
name = "readyaction"
version = "0.1.0"
description = "VLM inference server outputting actions given images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "openai>=1.58.0",
    "honcho>=1.1.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "ultralytics>=8.3.0",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
